# internal/handler/scanImage.handler.go
@@ -1,0 +1,23 @@
+// Code generated by GinX. DO NOT EDIT.
+package handler
+
+import (
+	"net/http"
+
+	"Rivus/internal/logic"
+
+	"github.com/gin-gonic/gin"
+)
+
+// ScanImage 扫描图片目录，构建图片元数据
+func (h *Handler) ScanImage(c *gin.Context) {
+	l := logic.NewScanImageLogic(h.Logic)
+
+	resp, err := l.ScanImage()
+
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+	c.JSON(http.StatusOK, resp)
+}
