# internal/handler/searchImage.handler.go
@@ -1,0 +1,24 @@
+// Code generated by GinX. DO NOT EDIT.
+package handler
+
+import (
+	"net/http"
+
+	generated "Rivus/internal/generated"
+	"Rivus/internal/logic"
+
+	"github.com/gin-gonic/gin"
+)
+
+// SearchImage 搜索图片
+func (h *Handler) SearchImage(c *gin.Context, params generated.SearchImageParams) {
+	l := logic.NewSearchImageLogic(h.Logic)
+
+	resp, err := l.SearchImage(params)
+
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+	c.JSON(http.StatusOK, resp)
+}
